--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
       <span class="sr-only">Previous</span>
     </a>
     <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class=""></span>
+      <span class="glyphicon glyphicon-chevron-right"></span>
         <!--add glyphicon glyphicon-chevron-right here-->
-      <span class="sr-only"glyphicon glyphicon-chevron-right>Next</span>
+      <span class="sr-only">Next</span>
     </a>
   </div>
     </section>
